# SvcWrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: SvcWrapperConfig.cmake.in
example/: CMakeLists.txt  README.md  echoserver.cpp  echoserver.h  echoserver_main.cpp  main.cpp  service.cpp
example/include/EchoServer/: echoserver_main.h
include/SvcWrapper/: svcwrapper.h
src/: CMakeLists.txt  svccli.cpp  svccli.h  svcwrapper_impl.cpp  svcwrapper_impl.h
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
